jackett/jackett-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: home-media
spec:
  selector:
    app: jackett
  ports:
  - port: 80
    targetPort: 9117
    protocol: TCP
  type: LoadBalancer
