jackett/jackett-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: home-media
spec:
  rules:
  - host: jackett.momochan.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: jackett-service
            port:
              number: 80
        pathType: Prefix
